--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "enzyme": "^3.1.0",
@@ -72,7 +73,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.2.1",
-    "flow-bin": "^0.58.0",
+    "flow-bin": "^0.59.0",
     "jest": "^21.2.1",
     "jest-enzyme": "^4.0.1",
     "mockdate": "^2.0.2",
